add navbar html structure and style it

--- a/main.css
+++ b/main.css
@@ -1,1 +1,42 @@
 /* resume webpage */
+
+body {
+  margin: 0;
+  padding: 0;
+}
+
+.hero {
+  height: 90vh;
+  background-color: #f08e80;
+}
+
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: white;
+  padding: 24px 32px;
+}
+
+.navbar .links a {
+  text-decoration: none;
+  color: white;
+  margin-right: 16px;
+  font-size: 1.2rem;
+}
+
+.hero .navbar p {
+  font-size: 2rem;
+  font-weight: bold;
+}
+
+.hero .navbar .contact {
+  background-color: white;
+  color: #f08e80;
+  padding: 16px 24px;
+  text-decoration: none;
+}
+
+.hero .navbar .contact:hover {
+  opacity: 0.8;
+}
