--- a/main.css
+++ b/main.css
@@ -7,8 +7,10 @@ body {
 }
 
 .hero {
-  height: 90vh;
+  min-height: 90vh;
   background-color: #f08e80;
+  color: white;
+  display: inline-block;
 }
 
 .navbar {
@@ -52,4 +54,29 @@ body {
   color: white;
   letter-spacing: 2px;
   padding: 32px 0;
+}
+
+.two-column-section {
+  font-size: 2rem;
+}
+
+.two-column-section p {
+  width: 50%;
+  box-sizing: border-box;
+  float: left;
+}
+
+.two-column-section .skills {
+  width: 50%;
+  float: left;
+  box-sizing: border-box;
+  padding: 0;
+  list-style-type: none;
+}
+
+.two-column-section .skills li {
+  width: 50%;
+  float: left;
+  font-size: 1.25rem;
+  margin: 8px 0;
 }
