--- a/main.css
+++ b/main.css
@@ -60,7 +60,7 @@ body {
   font-size: 2rem;
 }
 
-.two-column-section p {
+.two-column-section > p {
   width: 50%;
   box-sizing: border-box;
   float: left;
@@ -78,5 +78,38 @@ body {
   width: 50%;
   float: left;
   font-size: 1.25rem;
+  margin: 8px 0;
+}
+
+.blog-section {
+  background-color: white;
+  padding: 64px 0;
+}
+
+.blog-content {
+  padding: 0 15%;
+}
+
+.two-column-section .blog-posts {
+  width: 50%;
+  float: left;
+  margin-top: 24px;
+}
+
+.blog-title {
+  font-size: 1.5rem;
+}
+
+.blog-text {
+  font-size: 1rem;
+}
+
+.blog-date {
+  font-size: 0.9rem;
+  color: gray;
+  margin-bottom: 32px;
+}
+
+.two-column-section .blog-posts p {
   margin: 8px 0;
 }
