add footer and footer styles

--- a/main.css
+++ b/main.css
@@ -96,7 +96,7 @@ body {
   margin-top: 24px;
 }
 
-.blog-title {
+.blog-heading {
   font-size: 1.5rem;
 }
 
@@ -147,4 +147,20 @@ body {
   font-size: 0.9rem;
   color: gray;
   margin-bottom: 32px;
+}
+
+footer {
+  background-color: black;
+  color: white;
+  padding: 16px;
+}
+
+.footer-content {
+  text-align: center;
+}
+
+footer img {
+  width: 2rem;
+  height: 2rem;
+  margin: 0 8px;
 }
